JPEG XL decoder should support understand color profiles https://bugs.webkit.org/show_bug.cgi?id=233364 <rdar://problem/85767076>

Reviewed by Michael Catanzaro.

Source/WebCore:

Support color conversion by LCMS.

We subscribe the JXL_DEC_COLOR_ENCODING event to know when the color profile
that the image has is available, and try to get an ICC profile. After getting
the profile, we create a color conversion transform with the display's color
profile. When receiving decoded pixels, we convert the pixels with it.

Test: fast/images/jpegxl-with-color-profile.html

* platform/image-decoders/jpegxl/JPEGXLImageDecoder.cpp:
(WebCore::eventsWanted):
(WebCore::JPEGXLImageDecoder::~JPEGXLImageDecoder):
(WebCore::JPEGXLImageDecoder::clear):
(WebCore::JPEGXLImageDecoder::setFailed):
(WebCore::JPEGXLImageDecoder::ensureDecoderInitialized):
(WebCore::JPEGXLImageDecoder::rewind):
(WebCore::JPEGXLImageDecoder::decode):
(WebCore::JPEGXLImageDecoder::processInput):
(WebCore::JPEGXLImageDecoder::imageOut):
(WebCore::JPEGXLImageDecoder::clearColorTransform):
(WebCore::JPEGXLImageDecoder::prepareColorTransform):
(WebCore::JPEGXLImageDecoder::tryDecodeICCColorProfile):
* platform/image-decoders/jpegxl/JPEGXLImageDecoder.h:

LayoutTests:

Add test for JPEG XL with color profile. The test image is
converted from the JPEG test's image.

* TestExpectations:
* fast/images/jpegxl-with-color-profile-expected.html: Added.
* fast/images/jpegxl-with-color-profile.html: Added.
* fast/images/resources/red-at-12-oclock-with-color-profile.jxl: Added.
* platform/glib/TestExpectations:
* platform/wincairo/TestExpectations:



Canonical link: https://commits.webkit.org/245276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287081 268f45cc-cd09-0410-ab3c-d52691b4dbfc